@@ -1,119 +1,270 @@
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class rc {
-   public static void a(qq<ejr> $$0) {
-      jn<ddw> $$1 = $$0.a(lu.aF);
-      jn<elb> $$2 = $$0.a(lu.aU);
+   public static final ala<ely> a = ra.a("village/savanna/town_centers");
+   private static final ala<ely> b = ra.a("village/savanna/terminators");
+   private static final ala<ely> c = ra.a("village/savanna/zombie/terminators");
+
+   public static void a(qt<ely> $$0) {
+      jo<ejs> $$1 = $$0.a(lv.aQ);
+      jn<ejs> $$2 = $$1.b(sm.g);
+      jn<ejs> $$3 = $$1.b(sm.a);
+      jn<ejs> $$4 = $$1.b(sm.b);
+      jo<eoo> $$5 = $$0.a(lv.aS);
+      jn<eoo> $$6 = $$5.b(rb.b);
+      jn<eoo> $$7 = $$5.b(rb.j);
+      jn<eoo> $$8 = $$5.b(rb.m);
+      jo<ely> $$9 = $$0.a(lv.aU);
+      jn<ely> $$10 = $$9.b(ra.a);
+      jn<ely> $$11 = $$9.b(b);
+      jn<ely> $$12 = $$9.b(c);
       $$0.a(
-         ejl.a,
-         new els(
-            new ejr.c.a($$1.b(awd.y)).a(Map.of(btq.a, new ejy(ejy.a.b, bpf.a(new dei.c(bsx.aC, 1, 1, 1))))).a(ekc.c).a(),
-            $$2.b(qv.a),
-            7,
-            ehw.a(dzs.a(0)),
-            true,
-            dyy.a.a
+         a,
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(elw.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(elw.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(elw.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(elw.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(elw.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(elw.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
+            ),
+            ely.a.b
          )
       );
-      $$0.a(ejl.b, new elw(new ejr.c.a($$1.b(awd.t)).a(dyu.b.d).a(), elw.a.a));
-      $$0.a(ejl.c, new elw(new ejr.c.a($$1.b(awd.u)).a(dyu.b.d).a(), elw.a.b));
-      $$0.a(ejl.d, new emo(new ejr.c($$1.b(awd.Q))));
-      $$0.a(ejl.e, new elu(new ejr.c($$1.b(awd.s))));
-      $$0.a(ejl.f, new eln(new ejr.c($$1.b(awd.q))));
-      $$0.a(ejl.g, new elr(new ejr.c($$1.b(awd.r))));
-      $$0.a(ejl.h, new emi(new ejr.c($$1.b(awd.G)), false));
-      $$0.a(ejl.i, new emi(new ejr.c($$1.b(awd.F)), true));
-      $$0.a(
-         ejl.j,
-         new emm(
-            new ejr.c.a($$1.b(awd.J))
-               .a(Map.of(btq.a, new ejy(ejy.a.a, bpf.a(new dei.c(bsx.bo, 1, 1, 1))), btq.b, new ejy(ejy.a.a, bpf.a(new dei.c(bsx.p, 1, 1, 1)))))
-               .a()
+      ra.a(
+         $$0,
+         "village/savanna/streets",
+         new ely(
+            $$11,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(elw.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(elw.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(elw.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(elw.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(elw.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(elw.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(elw.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(elw.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            ely.a.a
          )
       );
-      $$0.a(ejl.k, new emk(new ejr.c.a($$1.b(awd.H)).a(ekc.b).a()));
-      $$0.a(
-         ejl.l,
-         new emc(
-            new ejr.c.a($$1.b(awd.v))
-               .a(Map.of(btq.a, new ejy(ejy.a.b, bpf.a(new dei.c(bsx.Y, 1, 2, 4))), btq.e, new ejy(ejy.a.b, dei.a), btq.d, new ejy(ejy.a.b, dei.a)))
-               .a()
+      ra.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new ely(
+            $$12,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(elw.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(elw.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(elw.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(elw.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(elw.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            ely.a.a
          )
       );
-      $$0.a(ejl.m, new eme(new ejr.c($$1.b(awd.w)), eme.a.b, 0.3F, 0.9F));
-      $$0.a(ejl.n, new eme(new ejr.c($$1.b(awd.x)), eme.a.a, 0.3F, 0.9F));
-      $$0.a(ejl.o, new ely(new ejr.c.a($$1.b(awd.R)).a(Map.of(btq.a, new ejy(ejy.a.a, ely.d))).a(dyu.b.h).a()));
-      $$0.a(ejl.p, new ema(new ejr.c.a($$1.b(awd.S)).a(dyu.b.h).a(ekc.c).a(), eia.a(dzs.a(32), dzs.c(2))));
-      $$0.a(ejl.q, new elp(new ejr.c($$1.b(awd.W))));
-      $$0.a(ejl.r, new ell(new ejr.c.a($$1.b(awd.p)).a(dyu.b.d).a()));
-      $$0.a(ejl.s, new els(new ejr.c($$1.b(awd.T)), $$2.b(qm.a), 6, ehw.a(dzs.a(33)), false));
-      $$0.a(ejl.t, new els(new ejr.c.a($$1.b(awd.L)).a(ekc.c).a(), $$2.b(qw.a), 6, ehw.a(dzs.a(0)), true, dyy.a.a));
-      $$0.a(ejl.u, new els(new ejr.c.a($$1.b(awd.K)).a(ekc.c).a(), $$2.b(qs.a), 6, ehw.a(dzs.a(0)), true, dyy.a.a));
-      $$0.a(ejl.v, new els(new ejr.c.a($$1.b(awd.M)).a(ekc.c).a(), $$2.b(qz.a), 6, ehw.a(dzs.a(0)), true, dyy.a.a));
-      $$0.a(ejl.w, new els(new ejr.c.a($$1.b(awd.N)).a(ekc.c).a(), $$2.b(ra.a), 6, ehw.a(dzs.a(0)), true, dyy.a.a));
-      $$0.a(ejl.x, new els(new ejr.c.a($$1.b(awd.O)).a(ekc.c).a(), $$2.b(re.a), 6, ehw.a(dzs.a(0)), true, dyy.a.a));
-      $$0.a(
-         ejl.y,
-         new emg(
-            new ejr.c($$1.b(awd.E)),
-            List.of(new emg.a(emf.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new emg.a(emf.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      ra.a(
+         $$0,
+         "village/savanna/houses",
+         new ely(
+            $$11,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(elw.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(elw.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(elw.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(elw.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(elw.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(elw.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(elw.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(elw.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(elw.h(), 5)
+               }
+            ),
+            ely.a.b
          )
       );
-      $$0.a(ejl.z, new emg(new ejr.c($$1.b(awd.z)), new emg.a(emf.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
-      $$0.a(ejl.A, new emg(new ejr.c($$1.b(awd.A)), new emg.a(emf.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
-      $$0.a(ejl.B, new emg(new ejr.c($$1.b(awd.C)), new emg.a(emf.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
-      $$0.a(
-         ejl.C,
-         new emg(
-            new ejr.c($$1.b(awd.D)),
-            List.of(new emg.a(emf.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new emg.a(emf.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      ra.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new ely(
+            $$12,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(elw.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(elw.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(elw.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(elw.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(elw.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(elw.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(elw.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(elw.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(elw.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(elw.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(elw.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(elw.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(elw.h(), 5)
+               }
+            ),
+            ely.a.b
          )
       );
-      $$0.a(ejl.D, new emg(new ejr.c($$1.b(awd.B)), new emg.a(emf.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
-      $$0.a(ejl.E, new emg(new ejr.c($$1.b(awd.V)), new emg.a(emf.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
       $$0.a(
-         ejl.F,
-         new els(
-            new ejr.c.a($$1.b(awd.U))
-               .a(Arrays.stream(btq.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new ejy(ejy.a.b, bpf.c()))))
-               .a(dyu.b.h)
-               .a(ekc.d)
-               .a(),
-            $$2.b(qh.a),
-            Optional.of(akr.b("city_anchor")),
-            7,
-            ehw.a(dzs.a(-27)),
-            false,
-            Optional.empty(),
-            116,
-            List.of(),
-            els.d,
-            els.e
+         b,
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(elw.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            ely.a.a
          )
       );
-      $$0.a(ejl.G, new els(new ejr.c.a($$1.b(awd.P)).a(dyu.b.d).a(ekc.b).a(), $$2.b(rg.a), 7, ehw.a(dzs.a(-15)), false, dyy.a.a));
       $$0.a(
-         ejl.H,
-         new els(
-            new ejr.c.a($$1.b(awd.I))
-               .a(dyu.b.d)
-               .a(ekc.e)
-               .a(Arrays.stream(btq.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new ejy(ejy.a.a, bpf.c()))))
-               .a(),
-            $$2.b(rh.a),
-            Optional.empty(),
-            20,
-            eia.a(dzs.a(-40), dzs.a(-20)),
-            false,
-            Optional.empty(),
-            116,
-            rh.d,
-            new ekr(10),
-            end.a
+         c,
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(elw.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(elw.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            ely.a.a
+         )
+      );
+      ra.a($$0, "village/savanna/trees", new ely($$10, ImmutableList.of(Pair.of(elw.a($$2), 1)), ely.a.b));
+      ra.a(
+         $$0,
+         "village/savanna/decor",
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(elw.a($$2), 4),
+               Pair.of(elw.a($$3), 4),
+               Pair.of(elw.a($$4), 1),
+               Pair.of(elw.h(), 4)
+            ),
+            ely.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(elw.a($$2), 4),
+               Pair.of(elw.a($$3), 4),
+               Pair.of(elw.a($$4), 1),
+               Pair.of(elw.h(), 4)
+            ),
+            ely.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/savanna/villagers",
+         new ely(
+            $$10,
+            ImmutableList.of(
+               Pair.of(elw.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(elw.a("village/savanna/villagers/baby"), 1),
+               Pair.of(elw.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            ely.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new ely(
+            $$10,
+            ImmutableList.of(Pair.of(elw.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(elw.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            ely.a.b
          )
       );
    }
