@@ -1,250 +1,48 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class re {
-   public static final akq<elb> a = qx.a("village/taiga/town_centers");
-   private static final akq<elb> b = qx.a("village/taiga/terminators");
-
-   public static void a(qq<elb> $$0) {
-      jn<eiv> $$1 = $$0.a(lu.aQ);
-      jm<eiv> $$2 = $$1.b(sj.h);
-      jm<eiv> $$3 = $$1.b(sj.i);
-      jm<eiv> $$4 = $$1.b(sj.e);
-      jm<eiv> $$5 = $$1.b(sj.l);
-      jm<eiv> $$6 = $$1.b(sj.m);
-      jn<enr> $$7 = $$0.a(lu.aS);
-      jm<enr> $$8 = $$7.b(qy.f);
-      jm<enr> $$9 = $$7.b(qy.d);
-      jm<enr> $$10 = $$7.b(qy.k);
-      jm<enr> $$11 = $$7.b(qy.o);
-      jn<elb> $$12 = $$0.a(lu.aU);
-      jm<elb> $$13 = $$12.b(qx.a);
-      jm<elb> $$14 = $$12.b(b);
+public interface re {
+   static void a(qt<eku> $$0) {
+      jo<eko> $$1 = $$0.a(lv.aR);
+      jo<det> $$2 = $$0.a(lv.aF);
+      jn.c<eku> $$3 = $$0.a(
+         ekh.a,
+         new eku(
+            List.of(eku.a($$1.b(eki.t)), eku.a($$1.b(eki.u)), eku.a($$1.b(eki.v)), eku.a($$1.b(eki.w)), eku.a($$1.b(eki.x))), new elj(34, 8, elk.a, 10387312)
+         )
+      );
+      $$0.a(ekh.b, new eku($$1.b(eki.f), new elj(32, 8, elk.a, 14357617)));
+      $$0.a(ekh.c, new eku($$1.b(eki.g), new elj(32, 8, elk.a, 14357618)));
+      $$0.a(ekh.d, new eku($$1.b(eki.e), new elj(32, 8, elk.a, 14357619)));
+      $$0.a(ekh.e, new eku($$1.b(eki.j), new elj(32, 8, elk.a, 14357620)));
+      $$0.a(ekh.f, new eku($$1.b(eki.a), new elj(ki.g, ell.c.b, 0.2F, 165745296, Optional.of(new ell.a($$3, 10)), 32, 8, elk.a)));
+      $$0.a(ekh.q, new eku($$1.b(eki.F), new elj(24, 8, elk.a, 20083232)));
+      $$0.a(ekh.g, new eku($$1.b(eki.l), new elj(32, 5, elk.b, 10387313)));
+      $$0.a(ekh.h, new eku($$1.b(eki.d), new elj(80, 20, elk.b, 10387319)));
+      $$0.a(ekh.i, new eku($$1.b(eki.r), new elj(new ki(9, 0, 9), ell.c.c, 0.01F, 0, Optional.empty(), 1, 0, elk.a)));
+      $$0.a(ekh.j, new eku(List.of(eku.a($$1.b(eki.b)), eku.a($$1.b(eki.c))), new elj(ki.g, ell.c.d, 0.004F, 0, Optional.empty(), 1, 0, elk.a)));
       $$0.a(
-         a,
-         new elb(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(ekz.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(ekz.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(ekz.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
+         ekh.k,
+         new eku(
+            List.of(
+               eku.a($$1.b(eki.y)),
+               eku.a($$1.b(eki.z)),
+               eku.a($$1.b(eki.A)),
+               eku.a($$1.b(eki.B)),
+               eku.a($$1.b(eki.C)),
+               eku.a($$1.b(eki.D)),
+               eku.a($$1.b(eki.E))
             ),
-            elb.a.b
+            new elj(40, 15, elk.a, 34222645)
          )
       );
-      qx.a(
-         $$0,
-         "village/taiga/streets",
-         new elb(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(ekz.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(ekz.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(ekz.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(ekz.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(ekz.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(ekz.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(ekz.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(ekz.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(ekz.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(ekz.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(ekz.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ekz.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            elb.a.a
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new elb(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(ekz.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(ekz.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(ekz.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            elb.a.a
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/houses",
-         new elb(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(ekz.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(ekz.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(ekz.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(ekz.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(ekz.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(ekz.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(ekz.h(), 6)
-               }
-            ),
-            elb.a.b
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new elb(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(ekz.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(ekz.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(ekz.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(ekz.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(ekz.h(), 6)
-               }
-            ),
-            elb.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new elb(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(ekz.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(ekz.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(ekz.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            elb.a.a
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/decor",
-         new elb(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(ekz.a($$2), 4),
-               Pair.of(ekz.a($$3), 4),
-               Pair.of(ekz.a($$4), 2),
-               Pair.of(ekz.a($$5), 4),
-               Pair.of(ekz.a($$6), 1),
-               new Pair[]{Pair.of(ekz.h(), 4)}
-            ),
-            elb.a.b
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new elb(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ekz.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ekz.a($$2), 4),
-               Pair.of(ekz.a($$3), 4),
-               Pair.of(ekz.a($$4), 2),
-               Pair.of(ekz.a($$5), 4),
-               Pair.of(ekz.a($$6), 1),
-               Pair.of(ekz.h(), 4)
-            ),
-            elb.a.b
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/villagers",
-         new elb(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ekz.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(ekz.a("village/taiga/villagers/baby"), 1),
-               Pair.of(ekz.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            elb.a.b
-         )
-      );
-      qx.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new elb(
-            $$13,
-            ImmutableList.of(Pair.of(ekz.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(ekz.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            elb.a.b
-         )
-      );
+      $$0.a(ekh.l, new eku(List.of(eku.a($$1.b(eki.h)), eku.a($$1.b(eki.i))), new elj(24, 4, elk.a, 165745295)));
+      $$0.a(ekh.m, new eku(List.of(eku.a($$1.b(eki.m)), eku.a($$1.b(eki.n))), new elj(20, 8, elk.a, 14357621)));
+      $$0.a(ekh.n, new eku(List.of(eku.a($$1.b(eki.o), 2), eku.a($$1.b(eki.s), 3)), new elj(27, 4, elk.a, 30084232)));
+      $$0.a(ekh.o, new eku($$1.b(eki.p), new elj(2, 1, elk.a, 14357921)));
+      $$0.a(ekh.p, new eku($$1.b(eki.q), new elj(20, 11, elk.b, 10387313)));
+      $$0.a(ekh.r, new eku($$1.b(eki.k), new eli(32, 3, 128, $$2.b(awr.o))));
+      $$0.a(ekh.s, new eku($$1.b(eki.G), new elj(34, 8, elk.a, 83469867)));
+      $$0.a(ekh.t, new eku($$1.b(eki.H), new elj(34, 12, elk.a, 94251327)));
    }
 }
