@@ -1,53 +1,19 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rt {
-   public static final akq<ebq<?, ?>> a = rr.a("delta");
-   public static final akq<ebq<?, ?>> b = rr.a("small_basalt_columns");
-   public static final akq<ebq<?, ?>> c = rr.a("large_basalt_columns");
-   public static final akq<ebq<?, ?>> d = rr.a("basalt_blobs");
-   public static final akq<ebq<?, ?>> e = rr.a("blackstone_blobs");
-   public static final akq<ebq<?, ?>> f = rr.a("glowstone_extra");
-   public static final akq<ebq<?, ?>> g = rr.a("crimson_forest_vegetation");
-   public static final akq<ebq<?, ?>> h = rr.a("crimson_forest_vegetation_bonemeal");
-   public static final akq<ebq<?, ?>> i = rr.a("warped_forest_vegetation");
-   public static final akq<ebq<?, ?>> j = rr.a("warped_forest_vegetation_bonemeal");
-   public static final akq<ebq<?, ?>> k = rr.a("nether_sprouts");
-   public static final akq<ebq<?, ?>> l = rr.a("nether_sprouts_bonemeal");
-   public static final akq<ebq<?, ?>> m = rr.a("twisting_vines");
-   public static final akq<ebq<?, ?>> n = rr.a("twisting_vines_bonemeal");
-   public static final akq<ebq<?, ?>> o = rr.a("weeping_vines");
-   public static final akq<ebq<?, ?>> p = rr.a("patch_crimson_roots");
-   public static final akq<ebq<?, ?>> q = rr.a("basalt_pillar");
-   public static final akq<ebq<?, ?>> r = rr.a("spring_lava_nether");
-   public static final akq<ebq<?, ?>> s = rr.a("spring_nether_closed");
-   public static final akq<ebq<?, ?>> t = rr.a("spring_nether_open");
-   public static final akq<ebq<?, ?>> u = rr.a("patch_fire");
-   public static final akq<ebq<?, ?>> v = rr.a("patch_soul_fire");
+   public static final ala<eco<?, ?>> a = ru.a("end_platform");
+   public static final ala<eco<?, ?>> b = ru.a("end_spike");
+   public static final ala<eco<?, ?>> c = ru.a("end_gateway_return");
+   public static final ala<eco<?, ?>> d = ru.a("end_gateway_delayed");
+   public static final ala<eco<?, ?>> e = ru.a("chorus_plant");
+   public static final ala<eco<?, ?>> f = ru.a("end_island");
 
-   public static void a(qq<ebq<?, ?>> $$0) {
-      rr.a($$0, a, ece.aa, new eee(dga.H.o(), dga.kJ.o(), bqc.a(3, 7), bqc.a(0, 2)));
-      rr.a($$0, b, ece.Z, new eec(bpt.a(1), bqc.a(1, 4)));
-      rr.a($$0, c, ece.Z, new eec(bqc.a(2, 3), bqc.a(5, 10)));
-      rr.a($$0, d, ece.ab, new eex(dga.dV.o(), dga.dY.o(), bqc.a(3, 7)));
-      rr.a($$0, e, ece.ab, new eex(dga.dV.o(), dga.pr.o(), bqc.a(3, 7)));
-      rr.a($$0, f, ece.t);
-      egt $$1 = new egt(bpb.<dtc>a().a(dga.oD.o(), 87).a(dga.ox.o(), 11).a(dga.oo.o(), 1));
-      rr.a($$0, g, ece.W, new eeo($$1, 8, 4));
-      rr.a($$0, h, ece.W, new eeo($$1, 3, 1));
-      egt $$2 = new egt(bpb.<dtc>a().a(dga.oq.o(), 85).a(dga.oD.o(), 1).a(dga.oo.o(), 13).a(dga.ox.o(), 1));
-      rr.a($$0, i, ece.W, new eeo($$2, 8, 4));
-      rr.a($$0, j, ece.W, new eeo($$2, 3, 1));
-      rr.a($$0, k, ece.W, new eeo(egj.a(dga.or), 8, 4));
-      rr.a($$0, l, ece.W, new eeo(egj.a(dga.or), 3, 1));
-      rr.a($$0, m, ece.Y, new eff(8, 4, 8));
-      rr.a($$0, n, ece.Y, new eff(3, 1, 2));
-      rr.a($$0, o, ece.X);
-      rr.a($$0, p, ece.i, rr.a(ece.T, new efa(egj.a(dga.oD))));
-      rr.a($$0, q, ece.ae);
-      rr.a($$0, r, ece.k, new efd(epf.e.g(), true, 4, 1, jq.a(dfy::s, dga.dV, dga.dW, dga.L, dga.kJ, dga.pr)));
-      rr.a($$0, s, ece.k, new efd(epf.e.g(), false, 5, 0, jq.a(dfy::s, dga.dV)));
-      rr.a($$0, t, ece.k, new efd(epf.e.g(), false, 4, 1, jq.a(dfy::s, dga.dV)));
-      rr.a($$0, u, ece.i, rr.a(ece.T, new efa(egj.a(dga.cr)), List.of(dga.dV)));
-      rr.a($$0, v, ece.i, rr.a(ece.T, new efa(egj.a(dga.cs)), List.of(dga.dX)));
+   public static void a(qt<eco<?, ?>> $$0) {
+      ru.a($$0, a, edc.J);
+      ru.a($$0, b, edc.K, new ega(false, ImmutableList.of(), null));
+      ru.a($$0, c, edc.M, eff.a(arg.a, true));
+      ru.a($$0, d, edc.M, eff.a());
+      ru.a($$0, e, edc.l);
+      ru.a($$0, f, edc.L);
    }
 }
